--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main>
-  <section class="main-section">
+  <section class="main-section p-7">
 
     <div class="headline">
       <span>Kipper consultoria</span>
@@ -9,13 +9,17 @@
     <img ngSrc="./assets/consult.png" width="660" height="540" />
   </section>
 
-  <section class="benefit-section">
+  <section class="benefit-section p-7">
     <div class="benefit-data">
       <h2>95% das
         empresas</h2>
-
       <br>
     </div>
     <p>não sabem como lidar com problemas de <b>escalibilidade</b> e grande volume de requisições.</p>
   </section>
+  <section class="cta-section">
+    <btn-primary btn-text="Fale com um de nossos especialistas!"></btn-primary>
+  </section>
+
+  <news-form></news-form>
 </main>
