--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,39 +1,71 @@
-@import "../../../color-variable.scss";
+@import "./../../../color-variable.scss";
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 84px;
+}
 
 .main-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 20px;
   font-family: "Roboto", sans-serif;
 
-  padding: 0 70px;
-
   span {
-
-    color: $secondary-text;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
+    color: $secondary-text;
   }
 
   h1 {
-    color: $primary-text;
-    font-size: 72px;
+    font-size: 36px;
     font-weight: 900;
+    color: $primary-text;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
   }
 }
 
 .benefit-section {
-  margin-top: 3rem;
   display: flex;
-  padding: 0 70px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
-  h2 {
-    font-size: 60px;
-    font-weight: 600;
-    font-family: "Roboto", sans-serif;
+  gap: 40px;
+
+  .benefit-data {
+    border-bottom: 10px solid $secondary-color;
+    padding-bottom: 20px;
+
+    h2 {
+      font-size: 48px;
+      font-weight: 600;
+      font-family: "Roboto", sans-serif;
+      color: $primary-text;
+    }
   }
+}
+
+p {
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 300;
+
+  b {
+    background: -webkit-linear-gradient(180deg, $light-primary-color, $secondary-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-style: normal;
+  }
+}
+
+.cta-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
