--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap);
 
 
 * {
@@ -8,4 +8,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppings", sans-serif;
+}
+
+.p-7 {
+  padding: 0 70px;
 }
